--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "react": "^16.6.0",
+    "react-date-picker": "^7.0.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-input-mask": "^2.0.4",
+    "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-time-picker": "^3.0.0",
+    "reactstrap": "^6.5.0",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
