--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.6.0",
     "react-date-picker": "^7.0.0",
     "react-dom": "^16.6.0",
+    "react-icons": "^3.2.2",
     "react-input-mask": "^2.0.4",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
